--- a/project6/pyproject.toml
+++ b/project6/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "opencv-python>=4.12.0.88",
+    "streamlit>=1.48.0",
+    "tensorflow>=2.19.0",
+]
